ref: refactored find methods to not consider inactive keys